force-app/main/default/objects/Qst_Survey_Result__c/Qst_Survey_Result__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Qst_Survey_Result</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qst_Survey_Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>