force-app/main/default/objects/Qst_Survey_Result__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Qst Survey Result (ContactId)</relationshipLabel>
    <relationshipName>Qst_Survey_Result1</relationshipName>
    <type>Lookup</type>
</CustomField>