force-app/main/default/objects/Qst_Survey_Result__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>